# PinStick

./: .gitignore  AGENTS.md  MediaNoteSupport.swift  OverlayWindowSupport.swift  PinStickApp.swift  README.md
.github/: copilot-instructions.md
.github/scripts/: extract-version.sh
.github/workflows/: build-and-release.yml  prerelease.yml
Jot.xcodeproj/: project.pbxproj
cross-platform/: package-lock.json  package.json
cross-platform/flutter/: pubspec.yaml
cross-platform/flutter/lib/: main.dart
cross-platform/src/: index.html  main.js  styles.css
cross-platform/src-tauri/: Cargo.toml  tauri.conf.json
cross-platform/src-tauri/icons/: icon.icns
cross-platform/src-tauri/src/: main.rs
docs/: index.html
