[package]
name = "pinstick"
version = "2.6.3"
description = "PinStick cross-platform note pinning app"
authors = ["SillyLittleTech"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["custom-protocol"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[profile.release]
opt-level = "s"
