[package]
name = "pinstick"
version = "2.8.0"
description = "PinStick cross-platform note pinning app"
authors = ["SillyLittleTech"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["custom-protocol", "macos-private-api"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "linux")'.dependencies]
raw-window-handle = "0.5"
x11 = { version = "2", features = ["xlib"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[profile.release]
opt-level = "s"
